<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="253dp"
        android:layout_height="69dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="177dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="13dp"
            android:text="@string/activity" />

        <EditText
            android:id="@+id/editTextActivity"
            android:layout_width="296dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="68dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="136dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAlignment="center"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/radioFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish" />

            <RadioButton
                android:id="@+id/radioPending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pending" />

            <RadioButton
                android:id="@+id/radioPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plan" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="382dp"
        android:layout_height="66dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_weight="1"
            android:text="@string/typeofactivity" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:entries="@array/eventList"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/recordedButton"
            android:layout_width="197dp"
            android:layout_height="match_parent"
            android:onClick="onClickrecorded"
            android:text="@string/checkactivity" />

        <Button
            android:id="@+id/settingButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onClickSetting"
            android:text="@string/setting" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="104dp"
        android:layout_height="94dp"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/notes" />

</androidx.constraintlayout.widget.ConstraintLayout>