<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="64dp"
                android:layout_height="80dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="69dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/type"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="165dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/activity3"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/date"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/STATE"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textViewType"
                    android:layout_width="122dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="TextView"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewInformation"
                    android:layout_width="174dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewDateTime"
                    android:layout_width="114dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="TextView"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewState"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="TextView"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

    </LinearLayout>

</LinearLayout>